--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="row">
         <div class="col-xs-9 col-lg-3">
             <div class="position-fixed">
-                <p><a class="btn btn-secondary" href="luminaria.html">Inicio</a></p>
+                <p><a class="btn btn-secondary" href="#">Inicio</a></p>
             </div>
         </div>
         <div class="col-xs-12 col-lg-7">
