--- a/index.html
+++ b/index.html
@@ -331,6 +331,20 @@
                             <p>Es la temperatura utilizada para definir la vida util de los módulos LED. Sus unidades
                                 son ºC.</p>
                             <img class="resize_fit_center img-circle" src="img/view4m.png" class="img-circle">
+                            <h4>Temperaturas T<sub>c</sub> en los componentes de la luminaria</h4>
+                            <table class="tg">
+                                <tr>
+                                  <th class="tg-cly1" colspan="2">Temperatura Tc [ºC]</th>
+                                </tr>
+                                <tr>
+                                  <td class="tg-cly1">Board</td>
+                                  <td class="tg-0lax">45</td>
+                                </tr>
+                                <tr>
+                                  <td class="tg-0lax">Driver</td>
+                                  <td class="tg-0lax">40</td>
+                                </tr>
+                            </table>
                         </div>
                     </div>
                 </div>
@@ -341,11 +355,14 @@
                     <div class="row">
                         <div class="col-lg-8 mx-auto">
                             <h2>Análisis Térmico</h2>
-                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut optio velit
-                                inventore,
-                                expedita quo laboriosam possimus ea consequatur vitae, doloribus consequuntur ex. Nemo
-                                assumenda
-                                laborum vel, labore ut velit dignissimos.</p>
+                            <p class="lead">Las distribuciones de temperaturas experimentadas por OMEGA</p>
+                            <h3>distribuciones de temperatura</h3>
+                            <h4>Generales</h4>
+                            <img class="resize_fit_center img-circle" src="img/3dTemperatura.png" alt="" srcset="">
+                            <h4>Interior</h4>
+                            <img class="resize_fit_center img-circle"src="img/3dstreamline2.png" alt="" srcset="">
+                            <h4>T<sub>c</sub></h4>
+                            <img class="resize_fit_center img-circle" src="img/tcs.png" alt="" srcset="">
                         </div>
                     </div>
                 </div>
@@ -356,10 +373,7 @@
                     <div class="row">
                         <div class="col-lg-8 mx-auto">
                             <h2>Conclusiones</h2>
-                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat
-                                voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae
-                                magnam et
-                                repudiandae ipsa exercitationem, in, quo totam.</p>
+                            <p class="lead">Ninguno de los componentes experimenta una temperatura mayor a T<sub>c</sub></p>
                         </div>
                     </div>
                 </div>
@@ -370,10 +384,11 @@
                     <div class="row">
                         <div class="col-lg-8 mx-auto">
                             <h2>Contacto</h2>
-                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio fugiat
-                                voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae
-                                magnam et
-                                repudiandae ipsa exercitationem, in, quo totam.</p>
+                            <p class="lead">Corporación CRTM de Pacifico </p>
+                            <p class="lead">Tel.: +57 (2) 3936083</p>
+                            <p class="lead">Santiago de Cali</p>
+                            <a class="lead" href="http://www.crtmdelpacifico.org.co/">http://www.crtmdelpacifico.org.co/ </a>
+                            
                         </div>
                     </div>
                 </div>
@@ -386,7 +401,7 @@
     <!-- Footer -->
     <footer class="py-5 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+            <p class="m-0 text-center text-white">Copyright &copy;CRTM/ROY ALPHA 2020</p>
         </div>
         <!-- /.container -->
     </footer>
