--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Reporte Simulación Luminaria OMEGA</title>
+    <title>Reporte Simulación Luminaria</title>
 
     <!-- Bootstrap core CSS -->
     <!--  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
@@ -119,7 +119,7 @@
                             <table class="tg">
                                 <tr>
                                     <th class="tg-mcqj" colspan="2">Nombre del proyecto</th>
-                                    <th class="tg-wp8o" colspan="4">OMEGA</th>
+                                    <th class="tg-wp8o" colspan="4">XXX</th>
                                 </tr>
                                 <tr>
                                     <td class="tg-mcqj" colspan="2">Fecha</td>
