--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <header class="text-white">
         <div class="container text-center">
-            <h1>Reporte CFD Luminaria OMEGA</h1>
+            <h1>Reporte CFD Luminaria</h1>
             <p class="lead">Reporte de Simulación de Luminarias Outdoor</p>
             <table class="table table-sm text-white">
                 <thead class="">
